added method to update the records in DB if already present